Drop down & Text spacing fix

--- a/css/style.css
+++ b/css/style.css
@@ -36,11 +36,11 @@ h2 {
 }
 
 h3 {
-	font-size: 1.5em;
+	font-size: 1.3em;
 }
 
 h4 {
-	font-size: 1.3em;
+	font-size: 1.2em;
 }
 
 h5, h6 {
@@ -128,6 +128,11 @@ strong, b {
 	float: left;
 }
 
+.mapmenu {
+  height: 80px;
+  padding: 15px 0;
+}
+
 .mapmenu ul {
 	list-style-type: none;
 }
@@ -147,7 +152,7 @@ strong, b {
 .mapmenu li ul {
 	padding: 40px 0;
   	position: absolute;
-  	top: 30px;
+  	top: 40px;
   	left: 0;
   	width: 150px;
   	display: none;
@@ -211,6 +216,10 @@ strong, b {
 
 .mapmenu li:hover a {
 	color: #32acde;
+}
+
+.map {
+	padding: 0!important;
 }
 
 .header {
@@ -518,7 +527,7 @@ strong, b {
 }
 
 .search h3 {
-	margin: 20px 0;
+	margin: 10px 0;
 }
 
 .search h4 {
